# xa11y-table-repro

./: .gitignore  README.md  dump_accessibility.py  native_probes.py  pyproject.toml  qt_table_app.py
captures/: README.md
captures/darwin/: application.json  application.txt  qtableview-example.txt  qtableview-no-headers.txt  qtablewidget-example.txt  report.json
captures/linux/: application.json  application.txt  native-probe.json  qtableview-example.txt  qtableview-no-headers.txt  qtablewidget-example.txt  report.json
captures/windows/: application.json  application.txt  native-probe.json  qtableview-example.txt  qtableview-no-headers.txt  qtablewidget-example.txt  report.json
